--- a/src/style.css
+++ b/src/style.css
@@ -761,3 +761,8 @@ input.checkbox:checked:after {
     padding: 1em 0 0;
   }
 }
+
+#errorUserName {
+  background-color: rgb(184, 57, 57);
+  color: rgb(255, 255, 255);
+}
