--- a/src/style.css
+++ b/src/style.css
@@ -770,3 +770,7 @@ input.checkbox:checked:after {
   background-color: rgb(184, 57, 57);
   color: rgb(255, 255, 255);
 }
+
+#repasswd {
+  margin-top: 27px;
+}
